# anima

./: ARYA.md  CLAUDE.md  CURRENT_WORK.md  Cargo.toml  README.md  TASK.md
context/: AUTONOMOUS_CONV_SPEC.md  BACKLOG.md  CLAUDE_CODE_TOOL_SPEC.md  DESIGN.md  HEARTBEAT_SPEC.md  MULTI_AGENT_SPEC.md  STREAMING_SPEC.md  UPGRADE.md  context.md  teamwork.md
docs/: CONTEXT.md  DESIGN.md  NOTES.md  README.md  VISION.md  context.md  conversation-database.md  providers.md
docs/planning/: anima-states.md  anima-tdd-agent.md  anima-turns.md  ollama-settings.md  per-agent-chats.md  state-improvements.md
examples/: arya.persona  basic.toml  ollama.toml
examples/agents/demo/: config.toml  persona.md
src/: agent.rs  agent_dir.rs  auth.rs  config.rs  conversation.rs  daemon.rs  debug.rs  discovery.rs  embedding.rs  error.rs  lib.rs  llm.rs  main.rs  memory.rs  message.rs  messaging.rs  observe.rs  pipeline.rs  repl.rs  retry.rs  runtime.rs  socket_api.rs  supervision.rs  thread.rs  tool.rs  tool_registry.rs  tools.rs
src/tools/: add.rs  claude_code.rs  copy_lines.rs  echo.rs  edit_file.rs  http.rs  list_agents.rs  list_files.rs  mod.rs  notes.rs  peek_file.rs  python.rs  read_file.rs  remember.rs  safe_shell.rs  search_conversation.rs  send_message.rs  shell.rs  spawn_child.rs  task.rs  wait_for_child.rs  write_file.rs
