[package]
name = "anima"
version = "1.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
