[package]
name = "anima"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Arya <arya@inkthorne.com>"]
description = "The animating spirit — a lightweight Rust runtime for AI agents"
repository = "https://github.com/inkthorne/anima"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "time", "signal", "net", "io-util"] }
libc = "0.2"
toml = "0.9"
rustyline = "14"
dirs = "5"
thiserror = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
