[package]
name = "anima"
version = "3.8.11"
edition = "2024"
license = "MIT"
authors = ["Arya <arya@inkthorne.com>"]
description = "The animating spirit — a lightweight Rust runtime for AI agents"
repository = "https://github.com/inkthorne/anima"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "time", "signal", "net", "io-util"] }
libc = "0.2"
toml = "0.9"
rustyline = "17"
dirs = "6"
thiserror = "2"
regex = "1"
chrono = "0.4"
gethostname = "1.0"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
